--- a/src/components/js/OverlayScreen/OverlayScreen.scss
+++ b/src/components/js/OverlayScreen/OverlayScreen.scss
@@ -5,4 +5,28 @@
     left: 0%;
     background-color: rgba(64, 64, 64, 0.5);
     width: 100%;
+
+    .badges-container{
+        .badges{
+            position: absolute;
+            top: 10px;
+            left: 78%;
+            width: 20%;
+            color: white;
+            font-size: medium;
+            font-weight: bold;
+            background-color: red;
+            padding: 8px;
+            border-radius: 20px;
+        }
+
+        .plus{
+            position: absolute;
+            top: 60%;
+            left: 50%;
+            bottom: 0%;
+            transform: translate(-50%, -50%);
+            width: 100%;
+        }
+    }
 }
