--- a/src/components/js/OverlayScreen/OverlayScreen.scss
+++ b/src/components/js/OverlayScreen/OverlayScreen.scss
@@ -27,6 +27,11 @@
             bottom: 0%;
             transform: translate(-50%, -50%);
             width: 100%;
+
+            button{
+                background: none;
+                border: none;
+            }
         }
     }
 }
