--- a/src/components/js/CartButtons/CartButtons.scss
+++ b/src/components/js/CartButtons/CartButtons.scss
@@ -4,8 +4,9 @@
     background-color: rgb(192,192,192);
     border-radius: 10px;
     position: relative;
+    cursor: pointer;
 
-    .carknum{
+    .cartnum{
         position: absolute;
         right: -50%;
         background-color: red;
@@ -16,6 +17,5 @@
         height: 30px;
         font-size: 12px;
         text-align: center;
-        
     }
 }
