--- a/src/components/js/Cart/CartDetails.scss
+++ b/src/components/js/Cart/CartDetails.scss
@@ -2,8 +2,7 @@
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
     .Bill-container{
-        display: flex;
-        justify-content: space-between;
+        border-radius: 10px;
 
         .Bill-Text{
             text-align: left;
