--- a/src/components/js/Cart/CartDetails.scss
+++ b/src/components/js/Cart/CartDetails.scss
@@ -1,3 +1,5 @@
+@import '../style/variables';
+
 .CartList{
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
@@ -6,6 +8,12 @@
 
         .Bill-Text{
             text-align: left;
+        }
+        .multiple{
+            color: white;
+            padding: 10px;
+            margin-left: 5px;
+            background: $secondary-color;
         }
     }
 }
