--- a/src/components/js/OverlayScreen/OverlayScreen.scss
+++ b/src/components/js/OverlayScreen/OverlayScreen.scss
@@ -4,11 +4,13 @@
     bottom: 0%;
     left: 0%;
     background-color: rgba(64, 64, 64, 0.5);
+    border-radius: 20px;
     width: 100%;
     transition: background-color 0.3s ease;
 
     &:hover {
         background-color: rgba(64, 64, 64, 0.7);
+        border-radius: 20px;
     }
 
     .badges-container {
@@ -18,7 +20,7 @@
             left: 78%;
             width: 20%;
             color: white;
-            font-size: medium;
+            font-size: 14px;
             font-weight: bold;
             background-color: red;
             padding: 8px;
