--- a/src/components/js/Detailpage/Detailpage.scss
+++ b/src/components/js/Detailpage/Detailpage.scss
@@ -1,7 +1,33 @@
+.overlay-container{
+    position: relative;
+    width: 100%;
+
+    .img{
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+        border-radius: 20px;
+    }
+
+    .recipes{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+        object-fit: cover;
+        border-radius: 20px;
+    }
+}    
+
 .modal-90w{
     width: 90% !important;
     max-width: none !important;
-}
+    animation: modalEnter 0.3s forwards;
+    &.modal-exit {
+        animation: modalExit 0.3s forwards;
+    }}
 .modal-content {
     background-color:black !important;
 }
@@ -37,4 +63,25 @@
     border-radius: 20px;
     color: black;
     padding: 20px;
+}
+@keyframes modalEnter {
+    0% {
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@keyframes modalExit {
+    0% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(0.5);
+    }
 }
