--- a/src/components/js/Detailpage/Detailpage.scss
+++ b/src/components/js/Detailpage/Detailpage.scss
@@ -59,10 +59,8 @@
     border-radius: 20px;
 }
 .PrizeDetails{
-    background-color: white;
-    border-radius: 20px;
-    color: black;
-    padding: 20px;
+    color: white;
+    font-weight: bolder;
 }
 @keyframes modalEnter {
     0% {
