--- a/src/components/js/RecipesListing/RecipesListing.scss
+++ b/src/components/js/RecipesListing/RecipesListing.scss
@@ -1,43 +1,68 @@
-.recipes-container{
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-
-    .overlay-container{
-        position: relative;
-        width: 100%;
-
-        .img{
-            width: 100%;
-            height: 100%;
-            max-width: 100%;
-            border-radius: 20px;
-
-        }
-
-        .recipes{
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            max-width: 100%;
-            object-fit: cover;
-            border-radius: 20px;
-        }
-    }
-    
-}
-
-
-.racipes-image {
+.recipes-container {
+  .overlay-container {
     position: relative;
     width: 100%;
-    overflow: hidden;
 
-    img {
-        display: block;
-        width: 100%;
-        height: auto;
-        border-radius: 20px;
-
+    .img {
+      width: 100%;
+      height: 100%;
+      max-width: 100%;
+      border-radius: 20px;
     }
+
+    .recipes {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      max-width: 100%;
+      object-fit: cover;
+      border-radius: 20px;
+    }
+  }
+}
+
+.racipes-image {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+
+  img {
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+  }
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 50px;
+  margin-top: 35px;
+
+  li {
+    margin: 0 5px;
+
+    a {
+      padding: 8px 12px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      cursor: pointer;
+      text-decoration: none;
+      color: #333;
+
+      &:hover {
+        background-color: #f0f0f0;
+      }
+    }
+
+    &.active a {
+      background-color: #007bff;
+      color: #fff;
+      border-color: #007bff;
+    }
+  }
 }
