--- a/src/components/js/OverlayScreen/OverlayScreen.scss
+++ b/src/components/js/OverlayScreen/OverlayScreen.scss
@@ -1,43 +1,36 @@
 .overlay-screen {
-    position: absolute;
-    top: 0%;
-    bottom: 0%;
-    left: 0%;
-    background-color: rgba(64, 64, 64, 0.5);
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  background-color: rgba(64, 64, 64, 0.5);
+  border-radius: 20px;
+  width: 100%;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: rgba(64, 64, 64, 0.7);
     border-radius: 20px;
-    width: 100%;
-    transition: background-color 0.3s ease;
+  }
 
-    &:hover {
-        background-color: rgba(64, 64, 64, 0.7);
-        border-radius: 20px;
+  .badges-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 15%;
+
+    .minusbtn {
+      background-color: none !important;
+    }
+    .badges {
+      width: 20%;
+      color: white;
+      font-size: 16px;
+      font-weight: bolder;
     }
 
-    .badges-container {
-        .badges {
-            position: absolute;
-            top: 10px;
-            left: 78%;
-            width: 20%;
-            color: white;
-            font-size: 14px;
-            font-weight: bold;
-            background-color: red;
-            padding: 8px;
-            border-radius: 20px;
-        }
-
-        .plus {
-            position: absolute;
-            top: 60%;
-            left: 50%;
-            bottom: 0%;
-            transform: translate(-50%, -50%);
-
-            button {
-                background: none;
-                border: none;
-            }
-        }
+    .plus {
+      cursor: pointer;
     }
+  }
 }
