--- a/src/components/js/RecipesListing/RecipesListing.scss
+++ b/src/components/js/RecipesListing/RecipesListing.scss
@@ -7,7 +7,7 @@
       width: 100%;
       height: 100%;
       max-width: 100%;
-      border-radius: 20px;
+      border-radius: 0.75rem;
     }
 
     .recipes {
