--- a/src/components/js/Cart/Cart.scss
+++ b/src/components/js/Cart/Cart.scss
@@ -1,4 +1,33 @@
-.CarWrapper{
-    border-radius: 10px;
-    padding: 10px;
+.CarWrapper {
+  border-radius: 10px;
+  padding: 10px;
+  position: relative;
+
+  &::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: white;
+    position: absolute;
+    bottom: -5px;
+  }
+}
+.price {
+  position: relative;
+  padding-bottom: 10px;
+
+  p {
+    float: right;
+  }
+
+  &::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: white;
+    // position: absolute;
+    // bottom: -5px;
+  }
 }
