--- a/src/components/js/Cart/CartDetails.scss
+++ b/src/components/js/Cart/CartDetails.scss
@@ -1,8 +1,11 @@
 @import "../style/variables";
 
 .CartList {
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  background-color: rgba(30, 30, 30, 0.9);
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  background-color: rgba(255, 255, 255, 0.9);
+  color: black;
+  border-radius: 10px;
   .Bill-container {
     border-radius: 10px;
 
