--- a/src/components/js/OverlayScreen/OverlayScreen.scss
+++ b/src/components/js/OverlayScreen/OverlayScreen.scss
@@ -14,16 +14,18 @@
   }
 
   .badges-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 15%;
+    justify-content: space-between;
+    align-items: baseline;
 
     .minusbtn {
       background-color: none !important;
     }
     .badges {
-      width: 20%;
       color: white;
       font-size: 16px;
       font-weight: bolder;
