--- a/src/components/js/RecipesListing/RecipesListing.scss
+++ b/src/components/js/RecipesListing/RecipesListing.scss
@@ -1,5 +1,9 @@
 .recipes-listing {
   background: #f1f3f6;
+  .active {
+    background: #0d6efd;
+    color: white;
+  }
 }
 .recipes-container {
   .overlay-container {
